Fix width of collapsed infoboxes.

--- a/styles/tables.less
+++ b/styles/tables.less
@@ -16,7 +16,6 @@ table.infobox caption {
 }
 
 .app_table_collapsed_container {
-    width: 100%;
     padding-left: 12px;
     padding-right: 48px;
     padding-top: 12px;
@@ -48,7 +47,6 @@ table.infobox caption {
 }
 
 .app_table_collapsed_bottom {
-    width: 100%;
     color: #808080;
     padding-left: 12px;
     padding-right: 48px;
